# Kompute

./: .clang-format  CMakeLists.txt  format.sh  kernel.glsl
src/: kompute.cpp  kompute.hpp  main.cpp  mnist.c
